@@ -30,9 +30,9 @@ LIBGTOP_REQUIRED=2.14.6
 GTK_REQUIRED=2.8.0
 GNOME_VFS_REQUIRED=2.6.0
 GNOME_ICON_THEME_REQUIRED=2.15.3
-dnl PCRE_REQUIRED=6.4
+PCRE_REQUIRED=6.4
 
-PKG_CHECK_MODULES(PROCMAN, glib-2.0 >= $GLIB_REQUIRED gconf-2.0 >= $GCONF_REQUIRED libgtop-2.0 >= $LIBGTOP_REQUIRED libwnck-1.0 >= $LIBWNCK_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED gnome-icon-theme >= $GNOME_ICON_THEME_REQUIRED)
+PKG_CHECK_MODULES(PROCMAN, glib-2.0 >= $GLIB_REQUIRED gconf-2.0 >= $GCONF_REQUIRED libgtop-2.0 >= $LIBGTOP_REQUIRED libwnck-1.0 >= $LIBWNCK_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED gnome-icon-theme >= $GNOME_ICON_THEME_REQUIRED libpcre >= $PCRE_REQUIRED)
 
 
 AC_ARG_ENABLE(more-warnings,
