@@ -1,5 +1,13 @@
 2007-04-26  Benoît Dejean  <benoit@placenet.org>
 
+	* configure.in:
+	* src/Makefile.am:
+	* src/lsof.cpp:
+	
+	pcrecpp is back !
+
+2007-04-26  Benoît Dejean  <benoit@placenet.org>
+
 	* src/memmaps.cpp:
 	
 	Display device name instead of major/minor.
